...
@OptIn(ExperimentalMaterial3Api::class)
@Composable
internal fun RecordsAppBar(onMenuClick: () -> Unit) {
  TopAppBar(title = {
    Text(stringResource(R.string.record_title), style = MaterialTheme.typography.titleMediumEmphasized)
  }, actions = {
    IconButton(onClick = onMenuClick, modifier = Modifier.testTag("records-menu-open")) {
      Icon(painterResource(R.drawable.ic_menu), contentDescription = stringResource(R.string.menu_open))
    }
  })
}

@OptIn(ExperimentalMaterial3Api::class)
...
